--- a/index.html
+++ b/index.html
@@ -23,7 +23,7 @@
 				text-align: center;
 				margin:auto;
 				width:100%;
-				font-family:Arial, Helvetica, sans-serif;
+				font-family:sans-serif;
 			}
 			
 			ul, ol {
@@ -174,7 +174,7 @@
 </td>
 </tr>
 </table> 
-<p> volver al menu <a href="#header"><img src="https://image.flaticon.com/icons/png/512/60/60634.png" alt="Fleca de retorno" width="10px" height="10px"></a></p>
+<p> volver al menu <a href="#header"><img src="https://image.flaticon.com/icons/png/512/60/60634.png" alt="Flecha de retorno" width="10px" height="10px"></a></p>
  </div>
 </body>
 </HTML>
